--- a/index.html
+++ b/index.html
@@ -100,20 +100,31 @@
 </head>
 <body>
     <header>
-       <!-- Logo -->
-       <center>
-            <img src="logo.jpg" alt="BBFD Logo" style="width: 100px; height: auto;">
-       </center>
-
-        <nav>
-            <ul class="d-flex justify-content-center">
-                <li><a href="index.html" class="text-white">Home</a></li>
-                <li><a href="projects.html" class="text-white">Projects</a></li>
-                <li><a href="gallery.html" class="text-white">Gallery</a></li>
-                <li><a href="testimonials.html" class="text-white">Testimonials</a></li>
-                <li><a href="contact.html" class="text-white">Contact</a></li>
+      <!-- Logo -->
+    <center>
+        <img src="logo.jpg" alt="BBFD Logo" style="width: 100px; height: auto; margin-top: -5px;">
+    </center>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin-top: 20px;">
+        <div class="container">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <a class="nav-link bg-dark text-white rounded px-3 py-2" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link bg-dark text-white rounded px-3 py-2" href="projects.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link bg-dark text-white rounded px-3 py-2" href="gallery.html">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link bg-dark text-white rounded px-3 py-2" href="testimonials.html">Testimonials</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link bg-dark text-white rounded px-3 py-2" href="contact.html">Contact</a>
+                </li>
             </ul>
-        </nav>
+        </div>
+    </nav>    
     </header>
 
     <section id="hero" class="text-center text-white py-5">
